--- a/lunacy/index.html
+++ b/lunacy/index.html
@@ -5,10 +5,10 @@
 <title>lunacy: a simple, lightweight center-mode carousel plugin for jQuery</title>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="./js/lunacy.min.js"></script>
+<script src="js/lunacy.min.js"></script>
 
-<link rel="stylesheet" media="all" href="./css/lunacy.min.css" />
-<link rel="stylesheet" media="all" href="./css/site.min.css" />
+<link rel="stylesheet" media="all" href="css/lunacy.min.css" />
+<link rel="stylesheet" media="all" href="css/site.min.css" />
 
 </head>
 
