--- a/lunacy/index.html
+++ b/lunacy/index.html
@@ -1007,7 +1007,7 @@
 		</div>
 			</div>
 
-<script>$(".container").lunacy();</script>
+<script>$(".container").lunacy({ buttonLocation: 'inside'});</script>
 
 </body>
 </html>
