Reclaiming this space for France.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
-<!doctype html>
-<html lang="en">
+<html lang="en-us">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="base-url" content="https://danbo.land">
 
-<title>atacrawl</title>
+  <title>Dan Boland</title>
 
+  <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#243746">
+  <meta name="msapplication-TileColor" content="#243746">
+  <meta name="theme-color" content="#ffffff"> -->
+
+  <!-- <meta name="og:url" content="https://continuumclinical.com/">
+  <meta name="twitter:canonical" content="https://continuumclinical.com/">
+  <meta name="og:title" content="Continuum Clinical">
+  <meta name="twitter:title" content="Continuum Clinical">
+  <meta name="description" content="Continuum Clinical is a global clinical trial enrollment company with 25 years’ experience partnering with small to mid-sized biotech, large pharma sponsors, and CROs.">
+  <meta name="og:description" content="Continuum Clinical is a global clinical trial enrollment company with 25 years’ experience partnering with small to mid-sized biotech, large pharma sponsors, and CROs.">
+  <meta name="twitter:description" content="Continuum Clinical is a global clinical trial enrollment company with 25 years’ experience partnering with small to mid-sized biotech, large pharma sponsors, and CROs.">
+  <meta name="og:image" content="https://continuum-clinical.s3.amazonaws.com/meta/cc-meta-2019-updated.jpg">
+  <meta name="twitter:image" content="https://continuum-clinical.s3.amazonaws.com/meta/cc-meta-2019-updated.jpg">
+  <link rel="canonical" href="https://continuumclinical.com/"> -->
 </head>
 
 <body>
 
-<a href="./lunacy">lunacy</a>
+  <p>Dan Boland is a developer, designer and digital enthusiast.</p>
 
 </body>
 </html>
