Putting some semblance of content on this bad boy.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="base-url" content="https://danbo.land">
 
-  <title>Dan Boland</title>
+  <style type="text/css">
+  @import url('https://rsms.me/inter/inter.css');
+  *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
+  html { font-family: 'Inter', sans-serif; font-size: 16px; }
+  @media screen and (min-width: 480px) { html { font-size: 20px; } }
+  @media screen and (min-width: 640px) { html { font-size: 24px; } }
+  body { color: #353A3D; line-height: 1.375; display: flex; flex-direction: column; align-items: center; padding: 10vh 5%; text-align: center; letter-spacing: -.017em; border-top: 10vh solid #6B99BD;}
+  h1 { color: #333; font-size: 3rem; font-weight: 900; line-height: 1; letter-spacing: -.022em; }
+  p { padding-top: 1rem; }
+  ul { max-width: 30rem; padding-top: 1rem; list-style: none; }
+  li { display: inline-block; margin: 0 .125rem; }
+  a { color: #6B99BD; }
+  h6 { padding-top: 2rem; font-weight: normal; }
+  </style>
+
+  <title>Dan Boland, web developer/designer from Mount Prospect, IL (Chicago)</title>
 
   <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -16,21 +31,26 @@
   <meta name="msapplication-TileColor" content="#243746">
   <meta name="theme-color" content="#ffffff"> -->
 
-  <!-- <meta name="og:url" content="https://continuumclinical.com/">
-  <meta name="twitter:canonical" content="https://continuumclinical.com/">
-  <meta name="og:title" content="Continuum Clinical">
-  <meta name="twitter:title" content="Continuum Clinical">
-  <meta name="description" content="Continuum Clinical is a global clinical trial enrollment company with 25 years’ experience partnering with small to mid-sized biotech, large pharma sponsors, and CROs.">
-  <meta name="og:description" content="Continuum Clinical is a global clinical trial enrollment company with 25 years’ experience partnering with small to mid-sized biotech, large pharma sponsors, and CROs.">
-  <meta name="twitter:description" content="Continuum Clinical is a global clinical trial enrollment company with 25 years’ experience partnering with small to mid-sized biotech, large pharma sponsors, and CROs.">
-  <meta name="og:image" content="https://continuum-clinical.s3.amazonaws.com/meta/cc-meta-2019-updated.jpg">
-  <meta name="twitter:image" content="https://continuum-clinical.s3.amazonaws.com/meta/cc-meta-2019-updated.jpg">
-  <link rel="canonical" href="https://continuumclinical.com/"> -->
+  <meta name="og:url" content="https://danbo.land/">
+  <meta name="twitter:canonical" content="https://danbo.land/">
+  <meta name="og:title" content="Dan Boland, web developer/designer from Mount Prospect, IL (Chicago)">
+  <meta name="twitter:title" content="Dan Boland, web developer/designer from Mount Prospect, IL (Chicago)">
+  <meta name="description" content="Dan Boland is a well-rounded digital dude with over 16 years of professional experience.">
+  <meta name="og:description" content="Dan Boland is a well-rounded digital dude with over 16 years of professional experience.">
+  <meta name="twitter:description" content="Dan Boland is a well-rounded digital dude with over 16 years of professional experience.">
+  <link rel="canonical" href="https://danbo.land/">
 </head>
 
 <body>
 
-  <p>Dan Boland is a developer, designer and digital enthusiast.</p>
+  <h1>Hi, I&rsquo;m Dan Boland.</h1>
+  <p>I wear a lot of hats.</p>
+  <ul>
+    <li>Web developer.</li><li>Web designer.</li><li>Digital innovator.</li><li>Award winner.</li><li>Passionate leader.</li><li>Tech enthusiast.</li><li>All-around swell guy.</li>
+  </ul>
+  <p>My site is nowhere near ready for prime time, but that&rsquo;s okay.</p>
+  <p>Let&rsquo;s talk. I&rsquo;m <a target="_blank" href="https://twitter.com/atacrawl">@atacrawl</a> on Twitter.</p>
+  <h6>&copy; 2019 Dan Boland.</h6>
 
 </body>
 </html>
