--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
   <meta name="twitter:canonical" content="https://danbo.land/">
   <meta name="og:title" content="Dan Boland, web developer/designer from Mount Prospect, IL (Chicago)">
   <meta name="twitter:title" content="Dan Boland, web developer/designer from Mount Prospect, IL (Chicago)">
-  <meta name="description" content="Dan Boland is a well-rounded digital dude with over 16 years of professional experience.">
-  <meta name="og:description" content="Dan Boland is a well-rounded digital dude with over 16 years of professional experience.">
-  <meta name="twitter:description" content="Dan Boland is a well-rounded digital dude with over 16 years of professional experience.">
+  <meta name="description" content="Dan Boland is a well-rounded digital dude with two decades of professional experience.">
+  <meta name="og:description" content="Dan Boland is a well-rounded digital dude with two decades of professional experience.">
+  <meta name="twitter:description" content="Dan Boland is a well-rounded digital dude with two decades of professional experience.">
   <link rel="canonical" href="https://danbo.land/">
 </head>
 
@@ -50,7 +50,7 @@
   </ul>
   <p>My site is nowhere near ready for prime time, but that&rsquo;s okay.</p>
   <p>Let&rsquo;s talk. I&rsquo;m <a target="_blank" href="https://twitter.com/atacrawl">@atacrawl</a> on Twitter.</p>
-  <h6>&copy; 2019 Dan Boland.</h6>
+  <h6>&copy; 2022 Dan Boland.</h6>
 
 </body>
 </html>
